# CompetitiveAlgorithms

./: CMakeLists.txt  README.md  main.cpp  olymp_funcions.hpp  olymp_functions.hpp  segment_tree.hpp
algorithms/: cruscal.h
data_structures/: BinaryHeap.cpp  BinaryHeap.h  DSU.h  graphs.h  segment_tree.hpp
geometry/: convex_hull.h  geom_base.h  point_in_polygon.h  polar_angle_sort.h  polygon_area.h  polygon_perimeter.h
graphs/: cruscal.h  graph_is_connected.h
numeric/: eratosphene_sieve.h  factorization.h
task_solutions/: cruscal.cpp  rvq.in  segment_tree_A.cpp  segment_tree_B.cpp  sum.in
task_solutions/geometry/: convex_hull.cpp  geometry_header.h  point_in_polygon.cpp  polygon_area.cpp  testing_point_in_polygon.cpp
tests/: complexity_plotter.py  dsu_tests.h  factorization_tests.h  segment_tree_test.hpp
tests/geometry/: area_and_perimeter_test.h  area_test.h  base_util_tests.h  convex_hull_test.h  point_in_polygon_testing.h  polar_angle_sorting_test.h  test_data.h  test_points.ggb
